--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -167,8 +167,7 @@
                     <section id="BuildUI" data-hours="2" data-wip>
                         <h3>Build User Interface (UI)</h3>
                         <ol>
-                            <li>Introduction to <strong>Flask or Streamlit</strong> for a web interface (Streamlit
-                                recommended)</li>
+                            <li>Introduction to <strong>Streamlit</strong> for a web interface</li>
                             <li>Implementing the UI and connecting it to the AI logic</li>
                         </ol>
                     </section>
