--- a/pages/themes/NLP_Basics/NLP_Basics.html
+++ b/pages/themes/NLP_Basics/NLP_Basics.html
@@ -700,8 +700,8 @@
             </section>
 
 
-            <section class="main-section-title"><h1>Classification Metrix</h1></section>
-            <section class="sub-sections"><h2>Classification Metrix</h2>
+            <section class="main-section-title"><h1>Classification Metrics</h1></section>
+            <section class="sub-sections"><h2>Classification Metrics</h2>
                 <section><h3>Accuracy</h3>
                     <dl class="fa" style="min-width:80vw">
                         <dt>Accuracy is the ratio of correctly predicted instances to the total instances.</dt>
