--- a/pages/themes/_cliches/slides.html
+++ b/pages/themes/_cliches/slides.html
@@ -78,7 +78,7 @@
 
 <section class="main-sesction-title" id="___MainSectionTitle___"><h1>___MainSectionTitle___</h1></section>
 <section class="sub-sections"><h2>___MainSectionTitle___</h2>
-    <section><h3>___MainSectionSubTitle___</h3>
+    <section id="___MainSectionSubTitle___"><h3>___MainSectionSubTitle___</h3>
         <dl class="fa" style="min-width:80vw">
             <dt>__List item 1__</dt>
             <dd>__aditional_optional_notes__</dd>
