--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -117,7 +117,7 @@
 
                 <article>
                     <h1>Understanding LLMs</h1>
-                    <section id="IntroductionToLlmAndChatGpt" data-hours="4" data-wip>
+                    <section id="IntroductionToLLM" data-hours="4">
                         <h3>Introduction to LLM and ChatGPT</h3>
                         <ol>
                             <li>How neural networks work</li>
@@ -157,17 +157,16 @@
                     <section id="Project2_Assistant" data-hours="6" data-wip>
                         <h3>Project 2: AI Assistant</h3>
                         <ol>
-                            <li>Training an ML model for <strong>Sentiment Analysis</strong></li>
-                            <li>Designing the logic: connecting the ML model with <strong>ChatGPT for contextual
-                                    responses</strong></li>
-                            <li><strong>Individual Mentoring:</strong> implementing dynamic logic (Python)</li>
+                            <li>Training an ML model for Sentiment Analysis</li>
+                            <li>Designing the logic: connecting the ML model with ChatGPT for contextual responses</li>
+                            <li>Individual Mentoring: implementing dynamic logic (Python)</li>
                             <li>Testing and fine-tuning the chatbot based on user sentiment</li>
                         </ol>
                     </section>
                     <section id="BuildUI" data-hours="2" data-wip>
                         <h3>Build User Interface (UI)</h3>
                         <ol>
-                            <li>Introduction to <strong>Streamlit</strong> for a web interface</li>
+                            <li>Introduction to Streamlit for a web interface</li>
                             <li>Implementing the UI and connecting it to the AI logic</li>
                         </ol>
                     </section>
@@ -175,8 +174,7 @@
                         <h3>Cloud Deployment</h3>
                         <ol>
                             <li>Preparing for deployment: <code>requirements.txt</code>, dependency management</li>
-                            <li><strong>Practical Session:</strong> deploying the AI assistant online (Streamlit Cloud
-                                or similar)</li>
+                            <li>Practical Session: deploying the AI assistant online (Streamlit Cloud or similar)</li>
                             <li>Testing and sharing the project</li>
                         </ol>
                     </section>
@@ -187,17 +185,16 @@
                     <section id="Module11_FinalProject" data-hours="4" data-wip>
                         <h3>Final Project and Portfolio</h3>
                         <ol>
-                            <li>Selecting and planning your own idea for an <strong>AI Assistant</strong> (with
-                                instructor support)</li>
-                            <li><strong>Individual/Group Work</strong> on the project and mentoring</li>
+                            <li>Selecting and planning your own idea for an AI Assistant (with instructor support)</li>
+                            <li>Individual/Group Work on the project and mentoring</li>
                             <li>Preparing the presentation</li>
-                            <li><strong>Presenting the final projects</strong></li>
+                            <li>Presenting the final projects</li>
                         </ol>
                     </section>
                     <section id="PortfolioAndCvTips" data-hours="2" data-wip>
                         <h3>Discuss your portfolio and CV tips</h3>
                         <ol>
-                            <li>Tips for <strong>CV, LinkedIn</strong> and building an AI portfolio</li>
+                            <li>Tips for CV, LinkedIn and building an AI portfolio</li>
                         </ol>
                     </section>
                 </article>
