--- a/pages/readings/UsefulResources.html
+++ b/pages/readings/UsefulResources.html
@@ -15,19 +15,22 @@
     <h2><a href="/ProgressBG-ChatGPT_and_ML-Slides/index.html">ChatGPT_and_ML</a></h2>
     <h3>Free Resources</h3>
 </header>
-    <section class="disclaimer">The list is ever changing... Your proposals are welcome!</section>
+    <section class="disclaimer">The list is ever changing... Your proposals are welcome!</section><br>
     <section class="resources_list_container">
         <ul>
+            <li><a href="https://poloclub.github.io/transformer-explainer">Transformer Explained Visually</a>: learn How LLM Transformer Models Work with Interactive Visualization</li>
+            <li><a href="https://towardsdatascience.com/">Towards Data Science</a>: publish AI, ML & data-science insights to a global community of data professionals.</li>
+
             <li><a href="https://github.com/dkharazi/notes/tree/master/ml">Darius Kharazi notes on ML</a>: well structured GitHub repo with notes on ML</li>
-            <li><a href="https://readytobuild.app/">readytobuild.</a>: App Ideas Ready to Build</li>
+            <li><a href="https://readytobuild.app/">readytobuild.</a>: app ideas ready to build. Validated startup ideas that you can start building every week</li>
         </ul>
     </section>
     <section class="disclaimer">to be continued...</section>
     <footer><div class="license left">
-        <p><span>Iva E. Popova.</span>, 2018.
+        <p><span>Iva E. Popova.</span>, 2016-2025.
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a></p>
         </div>
-        <div class="right">Prepared for <a href="http://progressbg.net/програмиране-с-python-2/">ProgressBG: Програмиране с Python</a></div>
+        <div class="right">Prepared for <a href="https://progressbg.net/chatgpt-i-machine-learning/">ProgressBG</a></div>
     </footer>
 </body>
 </html>
