--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -117,7 +117,7 @@
 
                 <article>
                     <h1>Understanding LLMs</h1>
-                    <section id="IntroductionToLLM" data-hours="6">
+                    <section id="ANN_LLM_Basics" data-hours="6">
                         <h3>Introduction to LLM and ChatGPT</h3>
                         <ol>
                             <li>How neural networks work</li>
