--- a/pages/themes/ANN_LLM_Basics/ANN_LLM_Basics.html
+++ b/pages/themes/ANN_LLM_Basics/ANN_LLM_Basics.html
@@ -53,7 +53,7 @@
 ##################### SLIDES START #####################
 ########################################################
 -->
-<section><h1>Introduction to LLM and ChatGPT</h1></section>
+<section><h1>Introduction to ANN, LLM and ChatGPT</h1></section>
 <section data-transition="zoom">
     <!-- linkedin badge -->
     <!--<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>-->
